@startuml StateMachine

' state "SelectRole" as select_role
' state "WaitingForConnectionHost" as waiting_for_fonnection_host
' state "WaitingForConnectionGuest" as waiting_for_connection_guest
' state fusionStart <<choice>>

state "Playing" as connected {
    state "ChoiceForGameStatus" as choice_for_game_status <<choice>>
    state "ChoiceForPlayer" as choice_for_player <<choice>>
    state "PlayerTwoTurn" as playing
    state "PlayerOneTurn" as wainting_for_opponent

    [*] -down-> choice_for_player : / start_game()

    choice_for_game_status -down-> [*] : test == GameEnded
    choice_for_game_status -up-> choice_for_player : test != GameEnded /\ntest = is_my_turn()

    choice_for_player -right-> playing : test == true
    choice_for_player -left-> wainting_for_opponent : test == false

    playing --> choice_for_game_status : EndTurn / refresh_screen();\n test = eval_game_statue();

    wainting_for_opponent --> choice_for_game_status : EndTurn / refresh_screen();\n test = eval_game_statue();

    ||

    state "DisplayScreen" as display

    [*] --> display

    ' display --> display : NextTurn / refresh_screen()
    display --> [*] : GameEnded
}
@enduml
